force-app/main/default/objects/nepa_gis_data_element__c.object
<CustomObject>
    <description>CEQ Standard GIS Data — GIS Data Element (child of PSS Polygon). Stores Container Inventory metadata for each spatial dataset associated with a NEPA project boundary: format, access method, coordinate system, bounding box, purpose, and access information. Supports MFR #6 (Integrated GIS Analysis Tools). The parent Polygon record holds the GeoJSON/KML geometry; this object holds the layer metadata per the CEQ standard.</description>
    <fields>
        <fullName>nepa_polygon__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The PSS Polygon record that holds the geometry (GeoJSON/KML) for this GIS dataset.</description>
        <inlineHelpText>Parent Polygon record containing the spatial geometry for this dataset.</inlineHelpText>
        <label>Polygon</label>
        <referenceTo>Polygon</referenceTo>
        <relationshipLabel>GIS Data Elements</relationshipLabel>
        <relationshipName>GIS_Data_Elements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nepa_format__c</fullName>
        <description>Spatial data format for this GIS dataset per CEQ standard Format property.</description>
        <inlineHelpText>Spatial data format (e.g., GeoJSON, KML, GML, Shapefile, GeoTIFF).</inlineHelpText>
        <label>Format</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GeoJSON</fullName>
                </value>
                <value>
                    <fullName>KML</fullName>
                </value>
                <value>
                    <fullName>GML</fullName>
                </value>
                <value>
                    <fullName>Shapefile</fullName>
                </value>
                <value>
                    <fullName>GeoTIFF</fullName>
                </value>
                <value>
                    <fullName>WKT</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nepa_access_method__c</fullName>
        <description>How this GIS dataset is accessed per CEQ standard Access Method property.</description>
        <inlineHelpText>How this dataset is accessed (URL, API, or direct upload).</inlineHelpText>
        <label>Access Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>URL</fullName>
                </value>
                <value>
                    <fullName>API</fullName>
                </value>
                <value>
                    <fullName>Direct Upload</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nepa_coordinate_system__c</fullName>
        <description>Coordinate reference system used by this dataset (e.g., WGS84, NAD83, EPSG:4326).</description>
        <inlineHelpText>Coordinate reference system (e.g., WGS84, EPSG:4326).</inlineHelpText>
        <label>Coordinate System</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nepa_bounding_box__c</fullName>
        <description>Geographic bounding box for this dataset as WKT or comma-separated min/max coordinates (minLon, minLat, maxLon, maxLat).</description>
        <inlineHelpText>Bounding box as WKT or minLon,minLat,maxLon,maxLat.</inlineHelpText>
        <label>Bounding Box</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nepa_purpose__c</fullName>
        <description>Purpose classification for this GIS dataset per CEQ standard Purpose property.</description>
        <inlineHelpText>How this dataset is used in the NEPA analysis.</inlineHelpText>
        <label>Purpose</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Project Boundary</fullName>
                </value>
                <value>
                    <fullName>Analysis Area</fullName>
                </value>
                <value>
                    <fullName>Base Map</fullName>
                </value>
                <value>
                    <fullName>Resource Layer</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nepa_database_reference__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True when this GIS element references an entry in an official GIS inventory or federal spatial database rather than a local upload.</description>
        <inlineHelpText>Check if this dataset references an official federal GIS inventory entry.</inlineHelpText>
        <label>References Official Database</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nepa_access_information__c</fullName>
        <description>URL, API endpoint, or instructions for accessing this GIS dataset externally.</description>
        <inlineHelpText>URL, API endpoint, or access instructions for this dataset.</inlineHelpText>
        <label>Access Information</label>
        <type>Url</type>
    </fields>
    <label>NEPA GIS Data Element</label>
    <nameField>
        <label>GIS Data Element Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NEPA GIS Data Elements</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>