force-app/main/default/objects/nepa_gis_data_element__c/fields/nepa_data_source_agency__c.field-meta.xml
<CustomField>
    <fullName>nepa_data_source_agency__c</fullName>
    <description>CEQ standard v1.2 provenance: agency that is the source of this data record.</description>
    <label>Data Source Agency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>